[package]
name = "galaxy-cats"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"

[features]
default = []
debug = ["bevy/debug"]
webgpu = ["bevy/webgpu"]

[patch.crates-io]
bevy_ggrs = { git = "https://github.com/tsar-boomba/bevy_ggrs.git" }

[dependencies]
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
bevy = "0.18.0-rc.2"
bevy_ggrs = { git = "https://github.com/tsar-boomba/bevy_ggrs.git" }
serde = { version = "1.0.228", features = ["derive"] }
clap = { version = "4.5.54", features = ["derive"] }
bevy_matchbox = { git = "https://github.com/tsar-boomba/matchbox.git", features = ["ggrs"] }
bevy_roll_safe = { git = "https://github.com/tsar-boomba/bevy_roll_safe.git" }
itertools = "0.14.0"
